@startuml
skinparam backgroundColor #f8f9fa
skinparam class {
  BackgroundColor #d4edda
  BorderColor #28a745
  FontColor #343a40
  FontSize 12
}

skinparam package {
  BackgroundColor #e9ecef
  BorderColor #adb5bd
  FontColor #495057
  FontSize 11
  FontStyle bold
}

title "🏢 Diagrama de Entidades - Sistema de Gestión de Donaciones e Inventario"

package "👥 Gestión de Usuarios" {
  class Usuario
  class Rol
  class Donador
  class TiposDonador
  class Voluntario
}

package "💝 Gestión de Donaciones" {
  class Donacion
  class TipoDonacion
  class NecesidadesActuales
}

package "📦 Gestión de Inventario" {
  class Inventario
  class CategoriaInventario
}

package "🚚 Gestión de Distribución" {
  class Distribucion
  class DetalleDistribucion
  class AsignacionRecojo
  class Beneficiario
  class TiposBeneficiario
}

package "🔔 Sistema de Notificaciones" {
  class Notificacion
}

package "⚠️ Gestión de Incidencias" {
  class Incidencia
}

' Relaciones entre entidades
Usuario ||--o{ Donador : "1 usuario puede ser 1 donador"
Usuario ||--o{ Voluntario : "1 usuario puede ser 1 voluntario"
Usuario ||--o{ Notificacion : "1 usuario puede tener muchas notificaciones"
Usuario ||--o{ Incidencia : "1 usuario puede reportar muchas incidencias"
Usuario ||--o{ Distribucion : "1 usuario puede ser responsable de muchas distribuciones"
Usuario ||--o{ NecesidadesActuales : "1 usuario puede crear muchas necesidades"

Rol ||--o{ Usuario : "1 rol puede tener muchos usuarios"

TiposDonador ||--o{ Donador : "1 tipo puede tener muchos donadores"
TiposBeneficiario ||--o{ Beneficiario : "1 tipo puede tener muchos beneficiarios"

Donador ||--o{ Donacion : "1 donador puede hacer muchas donaciones"
TipoDonacion ||--o{ Donacion : "1 tipo puede tener muchas donaciones"
CategoriaInventario ||--o{ Donacion : "1 categoría puede tener muchas donaciones"
CategoriaInventario ||--o{ Inventario : "1 categoría puede tener muchos artículos"
CategoriaInventario ||--o{ NecesidadesActuales : "1 categoría puede tener muchas necesidades"

Donacion ||--o{ Inventario : "1 donación puede generar muchos artículos en inventario"
Donacion ||--o{ AsignacionRecojo : "1 donación puede tener muchas asignaciones de recojo"
Donacion ||--o{ NecesidadesActuales : "1 donación puede estar asociada a 1 necesidad"

Voluntario ||--o{ AsignacionRecojo : "1 voluntario puede tener muchas asignaciones"

Distribucion ||--o{ DetalleDistribucion : "1 distribución puede tener muchos detalles"
Distribucion ||--o{ Incidencia : "1 distribución puede tener muchas incidencias"
Beneficiario ||--o{ Distribucion : "1 beneficiario puede recibir muchas distribuciones"

Inventario ||--o{ DetalleDistribucion : "1 artículo puede estar en muchos detalles de distribución"

TipoDonacion ||--o{ NecesidadesActuales : "1 tipo puede tener muchas necesidades"

@enduml 